--- a/src/main/res/layout/destination_row.xml
+++ b/src/main/res/layout/destination_row.xml
@@ -8,6 +8,14 @@ android:orientation="horizontal">
             android:text="TextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/tvDestinationName" android:layout_weight="3" android:textSize="18sp"/>
+            android:id="@+id/tvDestinationName" android:layout_weight="8" android:textSize="18sp"/>
+    <Button
+            android:text="Abrir"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/btnOpenDestination" android:layout_weight="1"/>
+    <Button
+            android:text="Deletar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" android:id="@+id/btnDeleteDestination" android:layout_weight="1"/>
 
 </android.widget.LinearLayout>
